--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
+    "csvtojson": "^2.0.14",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
